# BetterTouchpad

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/fasa70/bettertouchpad/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  evdev_grab.c  root_helper.c  touchpad_bridge.c  uinput_mouse.c  uinput_touch.c
app/src/main/java/com/fasa70/bettertouchpad/: GestureRecognizer.kt  MainActivity.kt  NativeBridge.kt  SettingsRepository.kt  TouchpadService.kt  TouchpadTileService.kt
app/src/main/java/com/fasa70/bettertouchpad/ui/: SettingsScreen.kt
app/src/main/java/com/fasa70/bettertouchpad/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/fasa70/bettertouchpad/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
